After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 727964 - g_io_extension_point_get_extension_by_name: Warn, but don't crash, for NULL inputs
g_io_extension_point_get_extension_by_name: Warn, but don't crash, for NULL i...
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: gio
2.36.x
Other All
: Normal normal
: ---
Assigned To: gtkdev
gtkdev
Depends on:
Blocks:
 
 
Reported: 2014-04-10 13:24 UTC by Debarshi Ray
Modified: 2014-04-10 13:56 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
giomodule: Add a NULL guard to extension_point_get_extension_by_name (824 bytes, patch)
2014-04-10 13:31 UTC, Debarshi Ray
committed Details | Review

Description Debarshi Ray 2014-04-10 13:24:08 UTC
We don't want to special case NULL as a valid input, but that does not mean we have to crash. We can just warn instead. g_io_extension_point_implement does the same.
Comment 1 Debarshi Ray 2014-04-10 13:31:24 UTC
Created attachment 273987 [details] [review]
giomodule: Add a NULL guard to extension_point_get_extension_by_name
Comment 2 Allison Karlitskaya (desrt) 2014-04-10 13:41:18 UTC
Review of attachment 273987 [details] [review]:

Looks good.  Thanks!
Comment 3 Debarshi Ray 2014-04-10 13:56:13 UTC
Comment on attachment 273987 [details] [review]
giomodule: Add a NULL guard to extension_point_get_extension_by_name

Thanks for the review.