giomodule: Add a NULL guard to extension_point_get_extension_by_name

... otherwise a NULL input will lead to a crash in strcmp.

https://bugzilla.gnome.org/show_bug.cgi?id=727964